--- a/scss/keyframes.scss
+++ b/scss/keyframes.scss
@@ -84,3 +84,21 @@
     opacity: 0;
   }
 }
+
+@keyframes movie-animation2 {
+  0% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
